--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -2,13 +2,18 @@
 
 name: ansible-lint
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+      - wip/next
 
 jobs:
   ansible-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ansible/ansible-lint-action@master
+      - uses: actions/checkout@v3
+      - uses: ansible/ansible-lint-action@v6
 
 ...
