--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,26 @@
 ---
 
+dependencies: []
+
 galaxy_info:
   role_name: nsswitch
+  namespace: idiv_biodiversity
+
   author: Christian Krause
   description: 'Name Service Switch'
   company: German Centre for Integrative Biodiversity Research (iDiv)
   license: MIT
-  min_ansible_version: 2.4
+  min_ansible_version: '2.9'
 
   platforms:
+
     - name: ArchLinux
+      versions:
+        - all
+
     - name: EL
       versions:
-        - 7
+        - '7'
 
   galaxy_tags:
     - nsswitch
